# ai-music-assistant

./: .eslintrc.js  .gitignore  API.md  CODING_STANDARDS.md  Dockerfile  GITHUB_GUIDE.md  README.md  __init__.py  app.py  intention_based_music.py  llm_music_demo.py  music_creation_pipeline.py  music_parameters.py  music_requirement_analyzer.py  music_structure_generator.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  standalone_app.py  text_to_music.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  python-app.yml
ai-music-assistant/: .gitignore  Dockerfile  README.md  VISUAL_IMPROVEMENTS.md  check_code.py  direct_midi_generator.py  docker-compose.yml  interactive_music_app.py  json_to_midi_player.py  midi_player.html  music_harmony.py  music_parameters.py  music_tools.sh  package.json  piano_midi_generator.py  preview.html  pyrightconfig.json  requirements.txt  setup_env.sh  simplified_mcp_test.py  standalone_app.py  start.sh  test_magenta_service.py
ai-music-assistant/backend/: __init__.py  install_magenta.sh  main.py  requirements.txt  theory_validator.py
ai-music-assistant/docs/: api_reference.md  architecture.md  developer_guide.md  user_guide.md
ai-music-assistant/examples/: llm_direct_music_generation.py  llm_music_generation_example.py  magenta_workflow_example.py  play_midi.py  test_huggingface_connection.py  three_stage_music_creation.py
ai-music-assistant/frontend/: .editorconfig  .env.development  .eslintrc.json  ARCHITECTURE.md  RESPONSIVE_IMPROVEMENTS.md  index.html  (+4 more)
backend/: __init__.py
(+168 files in other folders)
