[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint]
disable = ["C0111", "C0103", "C0303", "W1203", "R0903"]
ignore = ["CVS", ".git", ".venv", "node_modules", "tf_env"]
ignore-patterns = [".*_pb2.py", ".*_pb2_grpc.py"]
max-line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tf_env
)/
''' 